# test-rust-bazel-playground

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  hello.c
crate_manifests/: cargo-bazel-lock.json
embedded-qemu/: BUILD.bazel  link.x
embedded-qemu/src/: main.rs
hello_c/: BUILD.bazel  main.c
hello_rust/: BUILD.bazel
rust_crate/: BUILD.bazel
rust_crate/src/: main.rs
src/: main.rs
toolchain/: BUILD.bazel
