load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_doc")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "qemu-hello",
    srcs = ["src/main.rs"],
    data = ["memory.x"],
    edition = "2021",
    linker_script = "link.x",
    deps = [
        "@third_party_crates//vendor/crates:cortex-m",
        "@third_party_crates//vendor/crates:cortex-m-rt",
        "@third_party_crates//vendor/crates:cortex-m-semihosting",
        "@third_party_crates//vendor/crates:panic-halt",
    ],
)
