load("@rules_rust//rust:toolchain.bzl", "rust_toolchain")

package(default_visibility = ["//visibility:public"])

rust_toolchain(
    name = "rust_linux_x86_64_impl",
    binary_ext = "",
    dylib_ext = ".so",
    exec_triple = "x86_64-unknown-linux-gnu",
    os = "none",
    rust_doc = "@rust_linux_x86_64__thumbv7m-none-eabi_tools//:rustdoc",
    rust_std = "@rust_linux_x86_64__thumbv7m-none-eabi_tools//:rust_std-thumbv7m-none-eabi",
    rustc = "@rust_linux_x86_64__thumbv7m-none-eabi_tools//:rustc",
    rustc_lib = "@rust_linux_x86_64__thumbv7m-none-eabi_tools//:rustc_lib",
    staticlib_ext = ".a",
    stdlib_linkflags = [],
    target_triple = "thumbv7m-none-eabi",
)

toolchain(
    name = "rust_linux_x86_64",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:armv7-m",
        "@bazel_embedded//constraints/fpu:none",
        "@platforms//os:none",
    ],
    toolchain = ":rust_linux_x86_64_impl",
    toolchain_type = "@rules_rust//rust:toolchain",
)
